:art: add support for clang-format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,14 @@ set(SHAPES_VERSION_MAJOR 0)
 set(SHAPES_VERSION_MINOR 1)
 set(SHAPES_VERSION_PATCH 0)
 
+find_program(CLANG_FORMAT clang-format)
+if(NOT ${CLANG_FORMAT} STREQUAL "CLANG_FORMAT-NOTFOUND")
+    message(STATUS "clang-format found: ${CLANG_FORMAT}")
+    file(GLOB_RECURSE HPP_FILES ${PROJECT_SOURCE_DIR}/include/simo/*.hpp)
+    add_custom_target(shapes_format COMMENT "applying clang-format"
+            COMMAND ${CLANG_FORMAT} -i ${HPP_FILES})
+endif()
+
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_executable(main main.cpp)
 
