:rocket: update travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ include:
         - gcc-6
         - g++-6
   before_script:
-    - mkdir build
-    - cd build
     - pip install --user cpp-coveralls
 
   script:
@@ -26,7 +24,7 @@ include:
     - make test
     - cd ..
     - |
-      coveralls --build-root build --gcov-options '\-lp' \
+      coveralls --build-root tests --gcov-options '\-lp' \
         -e build/external \
         -e build/include \
         -e build/CMakeFiles/3.8.0 \
