--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,10 @@ before_script:
   - pip install --user cpp-coveralls
 
 script:
-  - cmake .
-  - cmake --build . --config Release
-  - ctest -C Release -V -j
+  - cmake . -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
+  - cmake --build . --j2
+  - ctest -j2
 
 after_success:
-  - coveralls --build-root tests --include include/shapes --gcov 'gcov-4.9' --gcov-options '\-lp'
+  - coveralls --gcov-options '\-lp'
 
-env:
-  #- COMPILER=g++-4.9
-  #- CCOMPILER=gcc-4.9
-  - CMAKE_OPTIONS=-DSHAPES_ENABLE_COVERAGE=ON
