--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,11 @@ addons:
     sources: ['ubuntu-toolchain-r-test']
     packages: ['g++-4.9', 'ninja-build']
 
-before_script:
-  - pip install --user cpp-coveralls
-
 script:
   - cmake . -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
   - cmake --build . --j2
   - ctest -j2
 
 after_success:
-  - coveralls --gcov-options '\-lp'
+  - bash <(curl -s https://codecov.io/bash)
 
