:sparkles: add point wkt parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,10 @@ cmake_minimum_required(VERSION 3.7.2)
 project(shapes LANGUAGES CXX VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+
+# regex
+set(HAVE_STD_REGEX 1)
+add_definitions(-DHAVE_STD_REGEX)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
 
