--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ matrix:
         - SHAPES_CXX=g++-8
         - SHAPES_CC=gcc-8
         - CTEST_OUTPUT_ON_FAILURE=1
+        - GIT_NAME: travis-ci
+        - GIT_EMAIL: pavel.simo@gmail.com
+        - GITHUB_REPO=pavelsimo/pavelsimo.github.io
+        - GIT_SOURCE=docs/html
 
       script:
         - $CC --version
@@ -24,6 +28,7 @@ matrix:
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
+        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then "$TRAVIS_BUILD_DIR/thirdparty/git-update-ghpages/git-update-ghpages" -e; fi
 
 install:
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
