--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-8', 'ninja-build']
+          packages: ['g++-8', 'ninja-build', 'doxygen']
       env:
         - SHAPES_CXX=g++-8
         - SHAPES_CC=gcc-8
@@ -24,7 +24,6 @@ matrix:
         - $CXX --version
         - cmake . -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
         - cmake --build . -- -j2
-        - cmake --build . --target shapes_documentation
         - ctest -V -j2
 
       after_success:
