:rocket: update travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
       env:
         - CTEST_OUTPUT_ON_FAILURE=1
         - SHAPES_CXX=g++-8
+        - SHAPES_CC=gcc-8
         - GIT_NAME=travis-ci
         - GIT_EMAIL=pavel.simo@gmail.com
         - GITHUB_REPO=pavelsimo/pavelsimo.github.io
