--- a/.travis.yml
+++ b/.travis.yml
@@ -183,7 +183,7 @@ matrix:
         - SHAPES_CC=clang-5.0
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-5.0']
           packages: ['g++-6', 'clang-5.0', 'ninja-build']
 
     - os: linux
@@ -193,7 +193,7 @@ matrix:
         - SHAPES_CC=clang-6.0
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-6.0']
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6.0']
           packages: ['g++-6', 'clang-6.0', 'ninja-build']
 
 install:
@@ -201,14 +201,9 @@ install:
   if [[ (-x $(which brew)) ]]; then
     brew update
     brew install cmake ninja
+    brew upgrade cmake
     if [[ "${SHAPES_DOC}" != "" ]]; then brew install doxygen; fi
     cmake --version
-  else
-    wget -O cmake.sh https://cmake.org/files/v3.10/cmake-3.10.0-rc1-Linux-x86_64.sh
-    mkdir -p /tmp/cmake
-    sudo sh cmake.sh --skip-license --exclude-subdir --prefix=/tmp/cmake
-    export PATH=/tmp/cmake/bin:$PATH
-    if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
