--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ matrix:
       env:
         - SHAPES_CXX=g++-4.9
         - SHAPES_CC=gcc-4.9
+        - CXXFLAGS=-std=c++11
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
@@ -196,6 +197,16 @@ matrix:
           sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-6.0']
           packages: ['g++-6', 'clang-6.0', 'ninja-build']
 
+    - os: linux
+      compiler: clang
+      env:
+        - SHAPES_CXX=clang++-7.0
+        - SHAPES_CC=clang-7.0
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-xenial-7.0']
+          packages: ['g++-6', 'clang-7.0', 'ninja-build']
+
 install:
 - |
   if [[ (-x $(which brew)) ]]; then
@@ -204,6 +215,8 @@ install:
     brew upgrade cmake
     if [[ "${SHAPES_DOC}" != "" ]]; then brew install doxygen; fi
     cmake --version
+  else
+    if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
