--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,16 @@
 image:
   - Visual Studio 2017
+
+init:
+  - cmake --version
+  - msbuild /version
+
 build_script:
 - cmd: >-
-    mkdir -p build
     cd build
     cmake .. -G "Visual Studio 15"
-    cmake --build . --config "Debug"
+    cmake --build . --config Release
+
+
+test_script:
+  - ctest -C Release -V --output-on-failure --verbose
