--- a/.travis.yml
+++ b/.travis.yml
@@ -211,6 +211,7 @@ install:
     cmake --version
   else
     if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
+    if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
@@ -221,8 +222,14 @@ script:
 - mkdir -p build && cd build
 - cmake -GNinja ..
 - cmake --build . -- -j2
-- if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - ctest --output-on-failure --verbose -j2
-- if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then bash <(curl -s https://codecov.io/bash); fi
+- |
+  if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
+    lcov --directory . --capture --output-file coverage.info
+    lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
+    lcov --list coverage.info
+    bash <(curl -s https://codecov.io/bash) -f coverage.info || echo "Codecov did not collect coverage reports"
+  fi
+- if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - cd ..
 
