--- a/.travis.yml
+++ b/.travis.yml
@@ -209,24 +209,24 @@ install:
     brew install cmake ninja
     brew upgrade cmake
     if [[ "${SHAPES_DOC}" != "" ]]; then brew install doxygen; fi
-    cmake --version
   else
     if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
     if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
+- cmake --version
 - $CC --version
 - $CXX --version
 
 script:
 - mkdir -p build && cd build
-- cmake -GNinja .. -D SHAPES_ENABLE_COVERAGE:BOOL=TRUE
+- cmake .. -GNinja -DSHAPES_ENABLE_COVERAGE:BOOL=TRUE
 - cmake --build . -- -j2
-- ctest --output-on-failure --verbose -j2
+- ctest -j2 --output-on-failure --verbose
 - |
   if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
-    ls -lah .
+    cmake --build . --target shapes_coverage
     bash <(curl -s https://codecov.io/bash)
   fi
 - if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
