--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,11 +107,9 @@ add_custom_target(shapes_parser COMMENT "lemon parser"
 # coverage #
 ############
 if(SHAPES_ENABLE_COVERAGE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -g -O0 -fprofile-arcs -ftest-coverage -Wno-unused-command-line-argument")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -g -O0 -fprofile-arcs -ftest-coverage")
     add_custom_target(shapes_coverage COMMENT "coverage report files"
-            COMMAND lcov --directory . --capture --output-file coverage.info
-            COMMAND lcov -e coverage.info ${SOURCE_FILES} --output-file coverage.info.filtered
-            COMMAND mv -f coverage.info.filtered coverage.info)
+            COMMAND lcov --directory . --capture --output-file coverage.info)
 endif()
 
 ###########
