--- a/.travis.yml
+++ b/.travis.yml
@@ -211,7 +211,7 @@ install:
     if [[ "${SHAPES_DOC}" != "" ]]; then brew install doxygen; fi
   else
     if [[ "${SHAPES_DOC}" != "" ]]; then sudo apt-get install doxygen; fi
-    if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt install gcov lcov gcovr; fi
+    if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then sudo apt-get install lcov; fi
   fi
 
 - if [[ "${SHAPES_CXX}" != "" ]]; then export CXX=${SHAPES_CXX}; export CC=${SHAPES_CC}; fi
@@ -226,8 +226,9 @@ script:
 - ctest -j2 --output-on-failure --verbose
 - |
   if [[ "${SHAPES_ENABLE_COVERAGE}" != "" ]]; then
+    lcov --version
     cmake --build . --target shapes_coverage
-    bash <(curl -s https://codecov.io/bash)
+    bash <(curl -s https://codecov.io/bash) -f coverage.info
   fi
 - if [[ "${SHAPES_DOC}" != "" ]]; then cmake --build . --target shapes_documentation; fi
 - cd ..
